@@ -399,10 +399,43 @@ quality loss.
 Because MP3 is patented, SoX cannot be distributed with MP3 support without
 incurring the patent holder's fees.  Users who require SoX with MP3 support
 must currently compile and build SoX with the MP3 libraries (LAME & MAD)
-from source code.
+from source code, or, in some cases, obtain pre-built dynamically loadable
+libraries.
 .SP
-Currently, SoX does not allow any encoding options to be specified when
-writing MP3 files; files are encoded at 128k constant bit-rate.
+MP3 compression parameters can be selected using SoX's \fB\-C\fR option
+as follows
+(note that the current syntax is subject to change):
+.SP
+The primary parameter to the LAME encoder is the bit rate. If the
+value of the \fB\-C\fR value is a positive integer, it's taken as
+the bitrate in kbps (e.g. if you specify 128, it uses 128 kbps).
+.SP
+The second most important parameter is probably "quality" (really
+performance), which allows balancing encoding speed vs. quality.
+In LAME, 0 specifies highest quality but is very slow, while
+9 selects poor quality, but is fast. (5 is the default and 2 is
+recommend as a good trade-off for high quality encodes.)
+.SP
+Becaues the \fB\-C\fR value is a float, the fractional part is used
+to select quality. 128.2 selects 128 kbps encoding with a quality
+of 2. There is one problem with this approach. We need 128 to specify
+128 kbps encoding with default quality, so 0 means use default. Instead
+of 0 you have to use .01 (or .99) to specify the highest quality
+(128.01 or 128.99).
+.SP
+LAME uses bitrate to specify a constant bitrate, but higher quality
+can be acheived using Variable Bit Rate (VBR). VBR quality (really
+size) is selected using a number from 0 to 9. Use a value of 0 for high
+quality, larger files, and 9 for smaller files of lower quality. 4 is
+the default.
+.SP
+In order to squeeze the selection of VBR into the the \fB\-C\fR value
+float we use negative numbers to select VRR. -4.2 would select default
+VBR encoding (size) with high quality (speed). One special case is 0,
+which is a valid VBR encoding parameter but not a valid bitrate.
+Compression value of 0 is always treated as a high quality vbr, as a
+result both -0.2 and 0.2 are treated as highest quality VBR (size) and
+high quality (speed).
 .SP
 See also
 .B Ogg Vorbis
