@@ -36,6 +36,7 @@ File formats:
 
   o New Grandstream ring-tone (gsrt) format.  (robs)
   o CVSD encode/decode speed-ups.  (Kimberly Rockwell, P. Chaintreuil)
+  o Add ability to select MP3 compression parameters.  (Jim Harkins)
 
 Audio device drivers:
 
